# yallpost

./: .gitignore  Cargo.toml  Dioxus.toml  build.rs  index.html  tailwind.config.js
.sqlx/: query-0016fe0715253aefd9019a9bb626ac9ec36452e4056d3823db7362ea84b4f432.json  query-04447d0548f790a89c9b6692fb0cfae0fa9a4bfdadfc7d3d22704037fb2e4a00.json  query-14b57637578f52b4c6883d45bca71eda73b184a33d02ea1e3a92148f42a07a96.json  query-1fba8eb26045a2bbb6fa8136439f8ff35165ed38b585a3f616de7ff3996f7596.json  query-34a9da0bb5a600cc88b439574d285a24be141cc1c396cc1621564ed7bae431e2.json  query-473f3870e9e37d3558846f1da74720b65ada5b9c6e610c2117976f5adcde4eb4.json  query-5a7c709d4025ef4084454fc0e38f96247b93a379de85cc9680f4e6de741ec707.json  query-62563587fb8cdb2a92e72faf97a3f718d886e36fefbbdb5f14f4d11ab4502a67.json  query-9237ffab8604e53bb7be7f209613e11e380bad9e1e83232ec30470ec19201418.json  query-99667ce4784476c7cf576987cd9de4f6697745a02568bdabd99b18f5dd3aefef.json  query-9ce92c61a2f94e7b248c3f80198190f0d88acae099796ec7f87e7c1079c667bf.json  query-a249c7e8c2fd83358e5532b18d38946078d7429f69dd6efb79418a986289ca8a.json  query-a63f900f17fc4dcd0b55aff45fd6abdfa4844b1ca125918dc54f49a046fc324f.json  query-ab6517b9e1b1389419b5210bc6d291b108d09c50af050023c22df1a6122d30ae.json  query-b3639788889957e7893cf0f84b3b1086ff3f0385c038ee017db1487633c72367.json  query-b75cd8bf51ddb6ad54551160c9df82976161d0c49de82c7a226c90eaa2ffe478.json  query-bebabf21fb5912bc0551068cf3c253fb53b3e8faf17969e725f9c8b929b39b2d.json  query-c09f10e8894065f0aa1d4bd0b10574451af87ff0dee5f8ab1394b90e1e96a17a.json  query-cc553ce6d7a85db065b694c211cc690f910335026ebf2b69af02becc093de33a.json  query-d620e21ce17fa93a4d4ab3475fb065188ad115e9462d2a9ce3a8311d8163035a.json  query-f1a38588704eea486835a2cb6247ff1fbeaab4e7871780a8386184c0ea681d74.json  query-f355ac208192dc8a7c463c74e4b11e9820374dedc2d7fa2dc23dfa49fc290db7.json  query-fb45ad253133a2c2807bbe1892f58576e678e96b776505e631e653ea92358242.json  query-ffb79dcb3a0dce7eae65065e8a0cd009ab6d2cf3ccb2c0dd110af79eefeaff3d.json
migrations/: 20230621182845_create_accounts.down.sql  20230621182845_create_accounts.up.sql  20230623190634_create_sessions.down.sql  20230623190634_create_sessions.up.sql  20230626203802_create_posts.up.sql  20230629010241_add_collate_no_case_to_accounts.down.sql  20230629010241_add_collate_no_case_to_accounts.up.sql  20230705181858_remove-title-from-posts.down.sql  20230705181858_remove-title-from-posts.up.sql  20230707183010_create_likes.down.sql  20230707183010_create_likes.up.sql  20230711004724_create-comments.up.sql
proc_macros/: Cargo.toml
proc_macros/src/: lib.rs
src/: lib.rs  main.rs
